--- a/MediaExtractor/Properties/Resources.de-DE.resx
+++ b/MediaExtractor/Properties/Resources.de-DE.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MenuFile" xml:space="preserve">
-    <value>File</value>
+    <value>Datei</value>
     <comment/>
   </data>
 </root>
