--- a/MediaExtractor/Properties/Resources.resx
+++ b/MediaExtractor/Properties/Resources.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!--
-    Microsoft ResX Schema
-
+  <!-- 
+    Microsoft ResX Schema 
+    
     Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
     associated with the data types.
-
+    
     Example:
-
+    
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,79 +26,79 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-
-    There are any number of "resheader" rows that contain simple
+                
+    There are any number of "resheader" rows that contain simple 
     name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
     mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
-
+    
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-
+    
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
+    value   : The object must be serialized into a byte array 
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace"/>
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
           <xsd:element name="metadata">
             <xsd:complexType>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0"/>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
               </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string"/>
-              <xsd:attribute name="type" type="xsd:string"/>
-              <xsd:attribute name="mimetype" type="xsd:string"/>
-              <xsd:attribute ref="xml:space"/>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
             <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string"/>
-              <xsd:attribute name="name" type="xsd:string"/>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="data">
             <xsd:complexType>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2"/>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1"/>
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3"/>
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4"/>
-              <xsd:attribute ref="xml:space"/>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
             <xsd:complexType>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required"/>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
             </xsd:complexType>
           </xsd:element>
         </xsd:choice>
@@ -119,114 +119,89 @@
   </resheader>
   <data name="MenuFile" xml:space="preserve">
     <value>File</value>
-    <comment/>
   </data>
   <data name="MenuFileOpen" xml:space="preserve">
     <value>Open File</value>
-    <comment/>
   </data>
   <data name="MenuFileSave" xml:space="preserve">
     <value>Save File</value>
-    <comment/>
   </data>
   <data name="MenuFileSaveAll" xml:space="preserve">
     <value>Save all Files</value>
-    <comment/>
   </data>
   <data name="MenuFileQuit" xml:space="preserve">
     <value>Quit</value>
-    <comment/>
   </data>
   <data name="MenuDocument" xml:space="preserve">
     <value>Document</value>
-    <comment/>
   </data>
   <data name="MenuDocumentShowImages" xml:space="preserve">
     <value>Show Embedded Image Files</value>
-    <comment/>
   </data>
   <data name="MenuDocumentShowOther" xml:space="preserve">
     <value>Show Other Embedded Files</value>
-    <comment/>
   </data>
   <data name="MenuDocumentKeepStructure" xml:space="preserve">
     <value>Keep Folder Structure when Extracting</value>
-    <comment/>
   </data>
   <data name="MenuDocumentOpenExplorer" xml:space="preserve">
     <value>Show in Explorer after Extracting</value>
-    <comment/>
   </data>
   <data name="MenuAppearance" xml:space="preserve">
     <value>Appearance</value>
-    <comment/>
   </data>
   <data name="MenuAppearanceDarkmode" xml:space="preserve">
     <value>Dark Mode</value>
-    <comment/>
   </data>
   <data name="MenuAppearanceLanguage" xml:space="preserve">
     <value>Language</value>
-    <comment/>
   </data>
   <data name="MenuAppearanceLanguageEnglish" xml:space="preserve">
     <value>English</value>
-    <comment/>
   </data>
   <data name="MenuAppearanceLanguageGerman" xml:space="preserve">
     <value>Deutsch (German)</value>
-    <comment/>
   </data>
   <data name="MenuHelp" xml:space="preserve">
     <value>Help</value>
-    <comment/>
   </data>
   <data name="MenuHelpAbout" xml:space="preserve">
     <value>About</value>
-    <comment/>
   </data>
   <data name="MenuHelpWebsite" xml:space="preserve">
     <value>Project Website</value>
-    <comment/>
   </data>
   <data name="MenuHelpChangeLog" xml:space="preserve">
     <value>Change Log</value>
-    <comment/>
   </data>
   <data name="MenuHelpLicense" xml:space="preserve">
     <value>License</value>
-    <comment/>
   </data>
   <data name="ButtonOpen" xml:space="preserve">
     <value>Open Document</value>
-    <comment/>
   </data>
   <data name="LabelListview" xml:space="preserve">
     <value>Embedded Files</value>
-    <comment/>
   </data>
   <data name="ListViewColumnName" xml:space="preserve">
     <value>Filename (Embedded)</value>
-    <comment/>
   </data>
   <data name="ListViewColumnExtension" xml:space="preserve">
     <value>Ext.</value>
-    <comment/>
   </data>
   <data name="ListViewColumnPath" xml:space="preserve">
     <value>Relative Path</value>
-    <comment/>
   </data>
   <data name="ButtonSave" xml:space="preserve">
     <value>Save File</value>
-    <comment/>
   </data>
   <data name="ButtonSaveAll" xml:space="preserve">
     <value>Save all Files</value>
-    <comment/>
   </data>
   <data name="LabelPreview" xml:space="preserve">
     <value>Preview</value>
-    <comment/>
+  </data>
+  <data name="TextNoPreview" xml:space="preserve">
+    <value>No Preview</value>
   </data>
 </root>
